# KTI-pos

./: .env.example  .gitignore  Dockerfile.frontend  README.md  STATE_MACHINES.md  deploy.bat  docker-compose.prod.yml  docker-compose.yml  start.sh
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  start.sh
backend/alembic/: env.py
backend/alembic/versions/: b05505109857_initial.py  c02_enhancements.py  c03_product_availability.py  c04_sunat_documents.py  c05_chat_messages.py  c06_supplier_city.py  c07_nota_credito.py  c08_trabajadores.py  c09_po_decimal_precision.py  c10_online_store.py  c11_series_is_default.py  c12_accounts_payable.py  c13_product_images.py  c14_sunat_settings.py  c15_cat_sales.py  c16_client_ubigeo.py  c17_sale_placa.py
backend/app/: config.py  main.py  scheduler.py
backend/app/api/: accounts_payable.py  auth.py  cat.py  catalogs.py  chat.py  clients.py  deps.py  inventory.py  online_orders.py  peru_consult.py  products.py  purchases.py  reports.py  sales.py  sunat.py  trabajadores.py  users.py
backend/scripts/: import_product_images.py  system_analysis.py
backend/seeds/: brands.csv  categories.csv  clients.csv  document_series.csv  import_all.py  import_stock.py  initial_data.py  inventory.csv  products.csv  seed_defaults.py  suppliers.csv  warehouses.csv
backend/tests/: conftest.py  test_auth.py  test_catalogs.py  test_chat.py  test_chatbot.py  test_clients.py  test_health.py  test_inventory.py  test_nota_credito.py  test_products.py  test_purchases.py  test_reports.py  test_sales.py  test_sunat.py  test_users.py
(+112 files in other folders)
